# lerobocasa

./: .env-template  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
docs/_versions/v0.2/introduction/: codebase_overview.md  (+2 more)
docs/datasets/: using_datasets.md
docs/introduction/: basic_usage.md  codebase_overview.md
docs/use_cases/: creating_datasets.md
examples/: dummy_policy_server.py  example_policy_server.py  replay_policy_server.py  replay_recording_server.py
src/lerobocasa/: __init__.py  macros.py
src/lerobocasa/converters/: convert_recordings_lerobot_v3.py
src/lerobocasa/demos/: demo_kitchen_scenes.py  demo_objects.py  demo_tasks.py  demo_teleop.py
src/lerobocasa/launch/: __init__.py  common.py  policy_rpc.py  recording_io.py  replay_policy_rpc.py  replay_simulation_client.py  simulation_client.py  simulation_node.py  teleop_utils.py
src/lerobocasa/scripts/: bench_speed.py  browse_mjcf_model.py  build_fixture_style_groups.py  collect_demos.py  download_datasets.py  download_kitchen_assets.py  setup_macros.py
src/lerobocasa/utils/: dataset_registry.py  dataset_registry_utils.py  env_utils.py  eval_utils.py  lerobot_utils.py  object_utils.py  placement_samplers.py  postprocess_xml_utils.py  texture_swap.py
src/lerobocasa/wrappers/: enclosing_wall_render_wrapper.py  gym_wrapper.py
tests/: test_asset_load_speed.py  test_dataset_playback.py  test_door_fixtures.py  test_env_determinism.py  test_env_speed.py  test_fixtures.py  test_layouts.py  test_novel_instruction.py  test_tasks_validity.py
(+376 files in other folders)
