[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobocasa"
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = [
    "lerobot==0.5.0",
    "robosuite",
    "h5py",
    "imageio",
    "pyyaml",
    "gymnasium>=1.2.3",
    "lxml>=6.0.2",
    "mujoco==3.3.1",
    "numpy==2.2.5",
    "hid>=1.0.9",
    "torch>=2.2.1,<2.11.0",
    "dotenv>=0.9.9",
    "msgpack>=1.1.2",
    "tyro>=1.0.12",
    "websockets>=16.0",
]

[tool.uv.sources]
robosuite = { path = ".dep/robosuite", editable = true }

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["lerobocasa*"]
